# stocks

./: .gitignore  README.md  pyproject.toml
src/: model.py  polygon.py  service.py
tests/: test_model.py  test_polygon.py  test_service.py
